# DQAR

./: CS494_Project_Proposal.txt  Formulas_and_Pseudocode_for_Slides.md  README.md  Speaker_Notes_CS494_Presentation.md  dummy_benchmark.json  dummy_benchmark_sweep.json  main.tex  pyproject.toml  ref.bib  report.tex
examples/: minimal_loop.py  run_dummy_dit.py
notebooks/: HW4_diffusion_Gautham_Satyanarayana (1).ipynb  benchmark_dit_xl.ipynb  benchmark_dit_xl_colab.ipynb  test_dit_xl_dqar.ipynb
scripts/: benchmark_dqar.py  benchmark_dummy_dit.py  dummy_benchmark_sweep.py  train_policy.py
src/dqar/: __init__.py  cache.py  config.py  controller.py  dit_wrapper.py  dummy_dit.py  policy.py  quantization.py  scheduler.py  stats.py
src/dqar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dummy_dit.py  test_policy.py  test_quantization.py  test_stats.py
